src/Parser/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package Parser;
import java.io.FileInputStream;

import Parser.generatednodes.*;
import Runtime.RuntimeNode;


public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();public static void main(String[] args) {

        try {
            Parser parser = new Parser(new FileInputStream(args[0]));
            parser.parse();
            ((ASTNode) parser.jjtree.rootNode()).dump("   ");
            RuntimeNode.runRootNode((ASTNode) parser.jjtree.rootNode());
        } catch (Exception exception) {
            System.out.println("Something went wrong.");
            System.out.println("Exception: ");
            System.out.println(exception);
        }
    }

  final public void parse() throws ParseException {
    trace_call("parse");
    try {
               /*@bgen(jjtree) parse */
  ASTGenerated_parse jjtn000 = new ASTGenerated_parse(JJTPARSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTCAPITALIZED:
          case KEYIF:
          case KEYWHILE:
          case KEYBLOCK:
          case KEYEMIT:
          case KEYTASK:
          case KEYPASS:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          if (jj_2_1(2)) {
            class_declaration();
          } else if (jj_2_2(4)) {
            func_declaration();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTCAPITALIZED:
            case KEYIF:
            case KEYWHILE:
            case KEYEMIT:
            case KEYTASK:
            case KEYPASS:
              func_action();
              break;
            default:
              jj_la1[1] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("parse");
    }
  }

  final public void func_action() throws ParseException {
    trace_call("func_action");
    try {
                     /*@bgen(jjtree) func_action */
  ASTGenerated_func_action jjtn000 = new ASTGenerated_func_action(JJTFUNC_ACTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        if (jj_2_5(2)) {
          variable_declaration();
          if (jj_2_3(2)) {

          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          variable_assignment();
          if (jj_2_4(2)) {

          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          class_method();
          jj_consume_token(PUNCSEMICOLON);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case KEYTASK:
            func_call();
            jj_consume_token(PUNCSEMICOLON);
            break;
          case KEYIF:
          case KEYWHILE:
          case KEYEMIT:
          case KEYPASS:
            statements();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case PUNCSEMICOLON:
              jj_consume_token(PUNCSEMICOLON);
              break;
            default:
              jj_la1[2] = jj_gen;
              ;
            }
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("func_action");
    }
  }

  final public void func_actions() throws ParseException {
    trace_call("func_actions");
    try {
                      /*@bgen(jjtree) func_actions */
  ASTGenerated_func_actions jjtn000 = new ASTGenerated_func_actions(JJTFUNC_ACTIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_2:
        while (true) {
          if (jj_2_6(2)) {
            ;
          } else {
            break label_2;
          }
          func_action();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("func_actions");
    }
  }

  final public void func_declaration() throws ParseException {
    trace_call("func_declaration");
    try {
                          /*@bgen(jjtree) func_declaration */
  ASTGenerated_func_declaration jjtn000 = new ASTGenerated_func_declaration(JJTFUNC_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(KEYTASK);
        identifier();
        jj_consume_token(PUNCLEFTPAREN);
        params();
        jj_consume_token(PUNCRIGHTPAREN);
        type();
        jj_consume_token(PUNCOPENARROW);
        func_action();
        jj_consume_token(PUNCCLOSEARROW);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("func_declaration");
    }
  }

  final public void param() throws ParseException {
    trace_call("param");
    try {
               /*@bgen(jjtree) param */
  ASTGenerated_param jjtn000 = new ASTGenerated_param(JJTPARAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        type();
        identifier();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("param");
    }
  }

  final public void params() throws ParseException {
    trace_call("params");
    try {
                /*@bgen(jjtree) params */
  ASTGenerated_params jjtn000 = new ASTGenerated_params(JJTPARAMS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_3:
        while (true) {
          if (jj_2_7(2)) {
            ;
          } else {
            break label_3;
          }
          jj_consume_token(PUNCCOMMA);
          param();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("params");
    }
  }

  final public void func_declartions() throws ParseException {
    trace_call("func_declartions");
    try {
                          /*@bgen(jjtree) func_declartions */
  ASTGenerated_func_declartions jjtn000 = new ASTGenerated_func_declartions(JJTFUNC_DECLARTIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case KEYTASK:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          func_declaration();
        }
      } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
      } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
      }
    } finally {
      trace_return("func_declartions");
    }
  }

  final public void class_declaration() throws ParseException {
    trace_call("class_declaration");
    try {
                           /*@bgen(jjtree) class_declaration */
  ASTGenerated_class_declaration jjtn000 = new ASTGenerated_class_declaration(JJTCLASS_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(KEYBLOCK);
        type_name();
        jj_consume_token(PUNCOPENARROW);
        variable_assignments();
        variable_declarations();
        func_declartions();
        jj_consume_token(PUNCCLOSEARROW);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("class_declaration");
    }
  }

//instantiate a class
  final public void class_instantiation() throws ParseException {
    trace_call("class_instantiation");
    try {
                             /*@bgen(jjtree) class_instantiation */
  ASTGenerated_class_instantiation jjtn000 = new ASTGenerated_class_instantiation(JJTCLASS_INSTANTIATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        identifier();
        jj_consume_token(PUNCLEFTPAREN);
        values();
        jj_consume_token(PUNCRIGHTPAREN);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("class_instantiation");
    }
  }

//calling a method from a class
  final public void class_method() throws ParseException {
    trace_call("class_method");
    try {
                      /*@bgen(jjtree) class_method */
  ASTGenerated_class_method jjtn000 = new ASTGenerated_class_method(JJTCLASS_METHOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        identifier();
        jj_consume_token(PUNCPERIOD);
        func_call();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("class_method");
    }
  }

//get property of class
  final public void class_property_get() throws ParseException {
    trace_call("class_property_get");
    try {
                            /*@bgen(jjtree) class_property_get */
  ASTGenerated_class_property_get jjtn000 = new ASTGenerated_class_property_get(JJTCLASS_PROPERTY_GET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        identifier();
        jj_consume_token(PUNCPERIOD);
        lowercase_identifier();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("class_property_get");
    }
  }

//calling a function
  final public void func_call() throws ParseException {
    trace_call("func_call");
    try {
                   /*@bgen(jjtree) func_call */
  ASTGenerated_func_call jjtn000 = new ASTGenerated_func_call(JJTFUNC_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(KEYTASK);
        identifier();
        jj_consume_token(PUNCLEFTPAREN);
        values();
        jj_consume_token(PUNCRIGHTPAREN);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("func_call");
    }
  }

//assign a variable
  final public void variable_assignment() throws ParseException {
    trace_call("variable_assignment");
    try {
                             /*@bgen(jjtree) variable_assignment */
  ASTGenerated_variable_assignment jjtn000 = new ASTGenerated_variable_assignment(JJTVARIABLE_ASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        identifier();
        jj_consume_token(PUNCEQUALSIGN);
        value();
        jj_consume_token(PUNCSEMICOLON);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("variable_assignment");
    }
  }

//multiple variable assignments
  final public void variable_assignments() throws ParseException {
    trace_call("variable_assignments");
    try {
                              /*@bgen(jjtree) variable_assignments */
  ASTGenerated_variable_assignments jjtn000 = new ASTGenerated_variable_assignments(JJTVARIABLE_ASSIGNMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_5:
        while (true) {
          if (jj_2_8(2)) {
            ;
          } else {
            break label_5;
          }
          variable_assignment();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("variable_assignments");
    }
  }

//declare a variable
  final public void variable_declaration() throws ParseException {
    trace_call("variable_declaration");
    try {
                              /*@bgen(jjtree) variable_declaration */
  ASTGenerated_variable_declaration jjtn000 = new ASTGenerated_variable_declaration(JJTVARIABLE_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        type();
        identifier();
        jj_consume_token(PUNCEQUALSIGN);
        value();
        jj_consume_token(PUNCSEMICOLON);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("variable_declaration");
    }
  }

//declare multiple variables
  final public void variable_declarations() throws ParseException {
    trace_call("variable_declarations");
    try {
                               /*@bgen(jjtree) variable_declarations */
  ASTGenerated_variable_declarations jjtn000 = new ASTGenerated_variable_declarations(JJTVARIABLE_DECLARATIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_6:
        while (true) {
          if (jj_2_9(2)) {
            ;
          } else {
            break label_6;
          }
          variable_declaration();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("variable_declarations");
    }
  }

  final public void identifier() throws ParseException {
    trace_call("identifier");
    try {
                    /*@bgen(jjtree) identifier */
                     ASTGenerated_identifier jjtn000 = new ASTGenerated_identifier(JJTIDENTIFIER);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTUNDERSCORE:
          underscore_identifier();
          break;
        case IDENTLOWERCASE:
          lowercase_identifier();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("identifier");
    }
  }

//holds the identifier (name) for functions and variables
  final public void underscore_identifier() throws ParseException {
    trace_call("underscore_identifier");
    try {
                               /*@bgen(jjtree) underscore_identifier */
                               ASTGenerated_underscore_identifier jjtn000 = new ASTGenerated_underscore_identifier(JJTUNDERSCORE_IDENTIFIER);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(IDENTUNDERSCORE);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.setFilteredValueForToken(t);
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("underscore_identifier");
    }
  }

  final public void lowercase_identifier() throws ParseException {
    trace_call("lowercase_identifier");
    try {
                              /*@bgen(jjtree) lowercase_identifier */
                              ASTGenerated_lowercase_identifier jjtn000 = new ASTGenerated_lowercase_identifier(JJTLOWERCASE_IDENTIFIER);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(IDENTLOWERCASE);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.setFilteredValueForToken(t);
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("lowercase_identifier");
    }
  }

  final public void type_name() throws ParseException {
    trace_call("type_name");
    try {
                   /*@bgen(jjtree) type_name */
                    ASTGenerated_type_name jjtn000 = new ASTGenerated_type_name(JJTTYPE_NAME);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(IDENTCAPITALIZED);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
           jjtn000.setFilteredValueForToken(t);
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("type_name");
    }
  }

  final public void type() throws ParseException {
    trace_call("type");
    try {
              /*@bgen(jjtree) type */
  ASTGenerated_type jjtn000 = new ASTGenerated_type(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        if (jj_2_10(2)) {
